--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_wiki">WikiActivity</string>
+    <string name="title_activity_list_wiki">ListWikiActivity</string>
 
 </resources>
